--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button>Generate Color</button>
     <br><br>
     <div><p>This is your color</p></div>
+    <h1>Made by Ashraf</h1>
 
     <script src="app.js"></script>
 </body>
